# dah-open-rag

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.free.yml  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/configs/: free.yaml  hybrid.yaml
backend/src/: __init__.py
backend/src/Chunkers/: basic_chunker.py
backend/src/Embedders/: dummy_embedder.py
backend/src/Loaders/: text_loader.py
backend/src/api/: dependencies.py  main.py
backend/src/api/routes/: ingest.py  query.py
backend/src/api/schemas/: request.py
backend/src/core/: __init__.py  factory.py  interfaces.py  models.py  orchestrator.py
backend/src/examples/: rag_examples.py
backend/src/implementations/: __init__.py
backend/src/llm/: __init__.py  base_llm.py  llm_adapter.py  llm_factory.py  prompt_manager.py
backend/src/prompts/: __init__.py  example_prompts.py
backend/src/rag/: __init__.py  engine.py  models.py
backend/src/retrieval/: __init__.py  bm25_retriever.py  dense_retriever.py  hybrid_retriever.py  reranker.py  retrieval_strategy.py
backend/src/retrieval/examples/: retrieval_examples.py
backend/src/tests/: test_llm.py  test_retrieval_comparaison.py
backend/src/vectorstores/: chroma_store.py  simple_store.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/services/: api.js
